--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,22 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-alembic=1.4.0=pypi_0
-ca-certificates=2020.1.1=0
-certifi=2019.11.28=py38_0
-click=7.0=pypi_0
-file-read-backwards=2.0.0=pypi_0
-flask=1.1.1=pypi_0
-flask-migrate=2.5.2=pypi_0
-flask-mysql=1.5.1=pypi_0
-flask-script=2.0.6=pypi_0
-flask-sqlalchemy=2.4.1=pypi_0
-itsdangerous=1.1.0=pypi_0
-jinja2=2.11.1=pypi_0
-libcxx=4.0.1=hcfea43d_1
-libcxxabi=4.0.1=hcfea43d_1
-libedit=3.1.20181209=hb402a30_0
-libffi=3.2.1=h475c297_4
-mako=1.1.1=pypi_0
-markupsafe=1.1.1=pypi_0
-mysqlclient=1.4.6=pypi_0
-ncurses=6.1=h0a44026_1
-openssl=1.1.1d=h1de35cc_4
-pip=20.0.2=py38_1
-pydash=4.7.6=pypi_0
-pygeodesy=20.2.12=pypi_0
-pymysql=0.9.3=pypi_0
-python=3.8.1=h359304d_1
-python-dateutil=2.8.1=pypi_0
-python-editor=1.0.4=pypi_0
-readline=7.0=h1de35cc_5
-setuptools=45.2.0=py38_0
-six=1.14.0=pypi_0
-sqlalchemy=1.3.13=pypi_0
-sqlite=3.31.1=ha441bb4_0
-tk=8.6.8=ha441bb4_0
-werkzeug=1.0.0=pypi_0
-wheel=0.34.2=py38_0
-xz=5.2.4=h1de35cc_4
-zlib=1.2.11=h1de35cc_3
+alembic==1.4.0
+certifi==2019.11.28
+Click==7.0
+file-read-backwards==2.0.0
+Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-MySQL==1.5.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.11.1
+Mako==1.1.1
+MarkupSafe==1.1.1
+mysqlclient==1.4.6
+pydash==4.7.6
+PyGeodesy==20.2.12
+PyMySQL==0.9.3
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.14.0
+SQLAlchemy==1.3.13
+Werkzeug==1.0.0
